--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
     "jade": "~1.3.0",
-    "mongodb": "*",
-    "mongoskin": "*",
-    "ejs": "*"
+    "mongodb": "~1.4.8",
+    "mongoskin": "~1.4.4",
+    "ejs": "~1.0.0"
   }
 }
